@@ -19,6 +19,7 @@
 
 package org.gjt.sp.jedit.search;
 
+import gnu.regexp.CharIndexed;
 import javax.swing.text.Segment;
 
 /**
@@ -38,9 +39,9 @@ public interface SearchMatcher
 	 * @return an array where the first element is the start offset
 	 * of the match, and the second element is the end offset of
 	 * the match
-	 * @since jEdit 4.0pre1
+	 * @since jEdit 4.0pre3
 	 */
-	int[] nextMatch(Segment text, boolean start, boolean end);
+	int[] nextMatch(CharIndexed text, boolean start, boolean end);
 
 	/**
 	 * Returns the specified text, with any substitution specified
